<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="app_name">MediaManager 1.0</string>
	<string name="scan_media">Medium per scannen anlegen</string>
	<string name="add_media">Medium manuell anlegen</string>
	<string name="borrow_media">Medium entleihen</string>
	<string name="lend_media">Medium verleihen</string>
	<string name="show_media">Medien anzeigen</string>
	<string name="give_media_back">Medium zurückmelden</string><string name="tvBarcode">Barcode:</string>
	<string name="tvTitle">Medientitel:</string>
	<string name="tvAuthor">Medienautor:</string>
	<string name="tvMediatype">Medientyp:</string>
	<string name="tvLendmedia">Medium verleihen</string>
	<string name="tvLegalOwner">Eigentümer</string>
	<string name="tvMedia">Medium:</string>
	<string name="tvLendto">Medium entleihen an:</string>
	<string name="tvLendtime">Medium entleihen bis:</string>
	<string name="tvBorrowMedia">Entliehenes Medium anlegen</string>
	<string name="tvBorrowtime">Medium enleihen bis:</string>
	<string name="tvGiveMediaBack">Medium zurückmelden</string><string name="btSave">Neues Medium anlegen</string>
	<string name="btLendmedia">Medium verleihen</string>
	<string name="btBorrowSave">Entliehenes Medium anlegen</string>
	<string name="btManually">Manuell</string><string name="btScan">Scannen</string><string name="btGiveMediaBack">Medium zurückmelden</string><string name="spMediatype">Wähle einen Typ</string>
	<string name="spMedia">Wähle ein Medium</string>
	<string name="spLendto">Wähle einen Kontakt</string>
	<string name="spLegalOwner">Wähle einen Kontakt</string>
	<string name="spFilter">Wähle einen Filter</string>






</resources>
