<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent" 
			android:orientation="vertical" >
			
	<LinearLayout	android:layout_width="fill_parent"
	             	android:layout_height="fill_parent"
	             	android:padding="10px"
	             	android:orientation="vertical">
	             
		<TextView 	android:text="@string/tvBorrowMedia"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content" 
					android:layout_gravity="center" 
					android:textStyle="bold"
					android:paddingTop="10px" 
					android:paddingBottom="10px" android:gravity="center"/>
	
		<TextView 	android:layout_width="fill_parent" 
					android:layout_height="wrap_content" 
					android:text="@string/tvBarcode" />
				
		<EditText 	android:id="@+id/etBarcode" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"  
					android:inputType="number|numberDecimal" />
	
		<TextView 	android:text="@string/tvTitle" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:paddingTop="10px" />
					
		<EditText	android:id="@+id/etTitle" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content" />
	
		<TextView 	android:text="@string/tvAuthor" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:paddingTop="10px" />
	
		<EditText 	android:id="@+id/etAuthor" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content" />
					
		<TextView 	android:text="@string/tvMediatype" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:paddingTop="10px" />
					
		<Spinner 	android:id="@+id/spMediatype" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content" 
					android:prompt="@string/spMediatype" />
					
		<TextView 	android:text="@string/tvLegalOwner" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content" 
					android:paddingTop="10px" />
	
		<Spinner 	android:id="@+id/spLegalOwner" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content" 
					android:prompt="@string/spLegalOwner" />
	
		<TextView 	android:text="@string/tvBorrowtime" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:paddingTop="10px" />
	
		<DatePicker	android:id="@+id/dpBorrowtime" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content" 
					android:paddingBottom="20px"/>
	
		<Button 	android:text="@string/btBorrowSave" 
					android:id="@+id/btBorrowSave" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content" />
					
	</LinearLayout>
</ScrollView>