<?xml version="1.0" encoding="UTF-8"?>
<ScrollView android:id="@+id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:padding="10px"
             android:orientation="vertical">
<TableRow android:gravity="center_horizontal" android:paddingTop="15px">
<TextView android:text="@string/tvLendmedia" android:id="@+id/tvLendmedia" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center" android:textStyle="bold"></TextView>
</TableRow>

<TableRow android:gravity="center_horizontal" android:paddingTop="15px">
<TextView android:text="@string/tvMedia" android:layout_width="fill_parent" android:layout_height="wrap_content" android:width="300px"></TextView>
</TableRow>
<TableRow android:gravity="center_horizontal" android:paddingTop="0px">
<Spinner android:id="@+id/spMedia" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/spMedia"></Spinner>
</TableRow>

<TableRow android:gravity="center_horizontal" android:paddingTop="0px">
<TextView android:text="@string/tvLendto" android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
</TableRow>
<TableRow android:gravity="center_horizontal" android:paddingTop="0px">
<Spinner android:id="@+id/spLendto" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/spLendto"></Spinner>
</TableRow>

<TableRow android:gravity="center_horizontal" android:paddingTop="0px">
<TextView android:text="@string/tvLendtime" android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
</TableRow>
<TableRow android:gravity="center_horizontal" android:paddingTop="5px">
<DatePicker android:id="@+id/dpLendtime" android:layout_width="wrap_content" android:layout_height="wrap_content"></DatePicker>
</TableRow>

<TableRow android:gravity="center_horizontal" android:paddingTop="20px">
<Button android:text="@string/btLendmedia" android:id="@+id/btLendmedia" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom"></Button>
</TableRow>
</TableLayout>
</ScrollView>
