<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:padding="5px"
             android:orientation="vertical" android:layout_gravity="fill_vertical">
  <TableRow android:gravity="center_horizontal">
    <ImageView android:id="@+id/ImageView01" 
    		   android:layout_width="wrap_content" 
    		   android:layout_height="wrap_content" 
    		   android:src="@drawable/mediamanager" android:adjustViewBounds="true">
    </ImageView>
</TableRow>
  <TableRow android:gravity="center_horizontal" android:paddingTop="5px">
    <Button android:id="@+id/scan_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_media" 
            android:gravity="fill"
            android:drawableLeft="@drawable/scann"
            android:height="58px"/>
  </TableRow>
  <TableRow android:gravity="center_horizontal">
    <Button android:id="@+id/add_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/add_media" 
            android:drawableLeft="@drawable/add"
            android:height="58px"/>
  </TableRow>
    <TableRow android:gravity="center_horizontal" android:paddingTop="0px">
    <Button android:id="@+id/show_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:drawableLeft="@drawable/show"
            android:height="58px" android:text="@string/show_media"/>
  </TableRow>
  <TableRow android:gravity="center_horizontal" android:paddingTop="0px">
    <Button android:id="@+id/lend_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/lend_media" 
            android:drawableLeft="@drawable/borrow"
            android:height="58px"/>
  </TableRow>
  <TableRow android:gravity="center_horizontal">
    <Button android:id="@+id/borrow_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/borrow_media" 
            android:drawableLeft="@drawable/lend"
            android:height="58px"/>
  </TableRow>
  <TableRow android:gravity="center_horizontal">
    <Button android:id="@+id/giveback_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/giveback_media"
            android:drawableLeft="@drawable/back"
            android:height="58px"/>
  </TableRow>
</TableLayout>
</ScrollView>